--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:layout_width="276dp"
         android:layout_height="52dp"
         android:background="@drawable/rounded"
+        android:fontFamily="@font/luckiestguy"
         android:text="ZALOGUJ SIĘ"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -29,6 +30,7 @@
         android:id="@+id/textView"
         android:layout_width="223dp"
         android:layout_height="82dp"
+        android:fontFamily="@font/luckiestguy"
         android:text="WITAMY!"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -64,6 +66,7 @@
         android:layout_width="370dp"
         android:layout_height="60dp"
         android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
         android:hint="HASŁO:"
         android:paddingStart="25dp"
         android:textColorHint="#FFFFFF"
@@ -81,6 +84,7 @@
         android:layout_width="370dp"
         android:layout_height="60dp"
         android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
         android:hint="LOGIN:"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
@@ -97,6 +101,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/luckiestguy"
         android:text="Nie masz konta? Zarejestruj się"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
