--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -9,6 +9,105 @@
     tools:context=".LoginActivity">
 
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText3"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:hint="IMIĘ :"
+        android:includeFontPadding="true"
+        android:paddingStart="25dp"
+        android:textColor="#000000"
+        android:textColorHint="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.42" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText7"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:hint="HASŁO :"
+        android:includeFontPadding="true"
+        android:paddingStart="25dp"
+        android:textColor="#000000"
+        android:textColorHint="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.74" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText6"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:hint="LOGIN:"
+        android:includeFontPadding="true"
+        android:paddingStart="25dp"
+        android:textColor="#000000"
+        android:textColorHint="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.66" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText5"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:hint="E-MAIL :"
+        android:includeFontPadding="true"
+        android:paddingStart="25dp"
+        android:textColor="#000000"
+        android:textColorHint="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.581" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText4"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:hint="NAZWISKO :"
+        android:includeFontPadding="true"
+        android:paddingStart="25dp"
+        android:textColor="#000000"
+        android:textColorHint="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/button3"
         android:layout_width="340dp"
@@ -46,10 +145,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.408"
+        app:layout_constraintHorizontal_bias="0.43"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.247" />
+        app:layout_constraintVertical_bias="0.265" />
 
     <TextView
         android:id="@+id/textView2"
@@ -69,99 +168,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.026" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
-        android:paddingStart="20dp"
-        android:text="IMIĘ :"
-        android:textAlignment="textStart"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.392" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
-        android:paddingStart="20dp"
-        android:text="NAZWISKO :"
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
-        android:paddingStart="20dp"
-        android:text="E-MAIL :"
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.59" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="340dp"
-        android:layout_height="49dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
-        android:paddingStart="20dp"
-        android:text="LOGIN :"
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.687" />
-
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
-        android:paddingStart="20dp"
-        android:text="HASŁO :"
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.778" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
