--- a/app/src/main/res/layout/activity_vocabulary_learning.xml
+++ b/app/src/main/res/layout/activity_vocabulary_learning.xml
@@ -14,11 +14,11 @@
         android:layout_height="200dp"
         android:background="@drawable/rounded_square"
         android:fontFamily="@font/luckiestguy"
-        android:hint="MIEJSCE NA UZUPEŁNIENIE LOSOWEGO SŁOWA :"
+        android:hint="WPISZ TŁUMACZENIE SŁOWA "
         android:includeFontPadding="true"
         android:paddingStart="10dp"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FAFAFA"
         android:textColorHint="#FAFAFA"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -27,7 +27,7 @@
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.822" />
+        app:layout_constraintVertical_bias="0.781" />
 
     <Button
         android:id="@+id/button3"
@@ -90,48 +90,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.026" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText4"
-        android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
-        android:hint="LOSOWE SŁOWO"
-        android:includeFontPadding="true"
-        android:paddingStart="10dp"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textColorHint="#FAFAFA"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText8"
-        android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
-        android:hint="WYBIERZ KATEGORIĘ :"
-        android:includeFontPadding="true"
-        android:paddingStart="10dp"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textColorHint="#FAFAFA"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.375" />
-
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="340dp"
@@ -148,6 +106,44 @@
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.46" />
+        app:layout_constraintVertical_bias="0.401" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:paddingStart="10dp"
+        android:paddingTop="8dp"
+        android:text="WYBIERZ KATEGORIĘ "
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.401" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:paddingStart="10dp"
+        android:paddingTop="8dp"
+        android:text="LOSOWE SŁOWO"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.486" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
