--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,6 +33,8 @@
         android:id="@+id/tableLayout"
         android:layout_width="385dp"
         android:layout_height="174dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/rounded_square"
         android:paddingLeft="-60dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -182,6 +184,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="388dp"
         android:layout_height="148dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/rounded_square"
         android:orientation="vertical"
         android:textAlignment="center"
@@ -243,6 +247,8 @@
         android:id="@+id/linearLayout2"
         android:layout_width="384dp"
         android:layout_height="111dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/rounded_square"
         android:orientation="vertical"
         android:textAlignment="center"
