impelementacja layoutu DictActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,28 @@
             app:layout_constraintVertical_bias="0.23" />
 
     <TextView
+        android:id="@+id/textView17"
+        android:layout_width="256dp"
+        android:layout_height="58dp"
+        android:fontFamily="@font/luckiestguy"
+        android:shadowColor="#56DB05"
+        android:shadowDx="5"
+        android:shadowDy="5"
+        android:shadowRadius="1.6"
+        android:text="NAUKA JĘZYKA"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#FFFFFF"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.23" />
+
+    <TextView
         android:id="@+id/textView2"
         android:layout_width="339dp"
         android:layout_height="120dp"
