--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_Zatwierdz"
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
@@ -29,7 +29,7 @@
         app:layout_constraintVertical_bias="0.868" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_Ustawienia"
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
@@ -48,7 +48,7 @@
         app:layout_constraintVertical_bias="0.955" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btn_Jezyk"
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
@@ -131,7 +131,7 @@
         app:layout_constraintVertical_bias="0.026" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_Slownik"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_marginEnd="5dp"
@@ -148,7 +148,7 @@
         app:layout_constraintVertical_bias="0.476" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_Slowka"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_marginStart="5dp"
@@ -165,7 +165,7 @@
         app:layout_constraintVertical_bias="0.476" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_Zdania"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_marginStart="5dp"
@@ -182,7 +182,7 @@
         app:layout_constraintVertical_bias="0.734" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_Ciekawostki"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_marginEnd="5dp"
