--- a/app/src/main/res/layout/activity_sentences.xml
+++ b/app/src/main/res/layout/activity_sentences.xml
@@ -9,6 +9,25 @@
     tools:context=".LoginActivity">
 
 
+    <Button
+        android:id="@+id/btn_Glowna4"
+        android:layout_width="300dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="@drawable/rounded"
+        android:fontFamily="@font/luckiestguy"
+        android:text="POWRÓT"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
     <TextView
         android:id="@+id/textView7"
         android:layout_width="340dp"
@@ -34,42 +53,42 @@
         android:text="0.557" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="340dp"
+        android:id="@+id/btn_Zatwierdz"
+        android:layout_width="138dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="DALEJ"
+        android:text="NASTĘPNE "
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.821"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.868" />
+        app:layout_constraintVertical_bias="0.869" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="340dp"
+        android:id="@+id/btn_Ustawienia"
+        android:layout_width="138dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="WSTECZ"
+        android:text="POPRZEDNIE"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.155"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.955" />
+        app:layout_constraintVertical_bias="0.869" />
 
     <TextView
         android:id="@+id/textView"
@@ -112,7 +131,7 @@
         app:layout_constraintVertical_bias="0.026" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_Slownik"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
@@ -128,7 +147,7 @@
         app:layout_constraintVertical_bias="0.557" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_Slowka"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
@@ -144,7 +163,7 @@
         app:layout_constraintVertical_bias="0.557" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_Zdania"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
@@ -160,7 +179,7 @@
         app:layout_constraintVertical_bias="0.738" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_Ciekawostki"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
