--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -143,7 +143,7 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/btn_Wyloguj"
         android:layout_width="300dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
@@ -162,7 +162,7 @@
         app:layout_constraintVertical_bias="0.976" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/btn_Glowna"
         android:layout_width="300dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
@@ -215,7 +215,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button12"
+            android:id="@+id/btn_Jasny"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="5dp"
@@ -229,7 +229,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button15"
+            android:id="@+id/btn_Ciemny"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="5dp"
@@ -270,7 +270,7 @@
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="1.6"
-            android:text="ZMEIŃ JĘZYK APLIKACJI:"
+            android:text="ZMIEŃ JĘZYK APLIKACJI:"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
@@ -278,7 +278,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button18"
+            android:id="@+id/btn_Angielski"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="5dp"
