--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,27 +47,44 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.955" />
 
-    <Button
-        android:id="@+id/btn_Jezyk"
+    <Spinner
+        android:id="@+id/spinner3"
         android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="-8dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/rounded"
-        android:fontFamily="@font/luckiestguy"
-        android:text="WYBIERZ JĘZYK"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:layout_height="44dp"
+
+        android:animateLayoutChanges="true"
+        android:background="@drawable/rounded_background"
+        android:contextClickable="false"
+
+        android:paddingStart="130dp"
+        android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.633"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="0.264" />
 
-        <TextView
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded"
+        android:fontFamily="@font/luckiestguy"
+        android:paddingStart="10dp"
+        android:paddingTop="8dp"
+        android:text="WYBIERZ Język "
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.327" />
+
+    <TextView
             android:id="@+id/textView"
             android:layout_width="256dp"
             android:layout_height="58dp"
