--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,25 @@
         app:layout_constraintVertical_bias="0.327" />
 
     <TextView
+        android:id="@+id/textView5"
+        android:layout_width="340dp"
+        android:layout_height="44dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:paddingStart="10dp"
+        android:paddingTop="8dp"
+        android:text="WYBIERZ JĘZYK"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.633"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.327" />
+
+    <TextView
         android:id="@+id/textView4"
         android:layout_width="340dp"
         android:layout_height="41dp"
