--- a/app/src/main/res/layout/activity_dict.xml
+++ b/app/src/main/res/layout/activity_dict.xml
@@ -26,10 +26,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
 
+
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="326dp"
-        android:layout_height="53dp"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
 
         android:animateLayoutChanges="false"
         android:background="@drawable/rounded_background"
@@ -37,34 +38,40 @@
 
         android:paddingStart="130dp"
         android:spinnerMode="dropdown"
-        android:textAlignment="viewEnd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.321" />
+        app:layout_constraintVertical_bias="0.282" />
 
     <TextView
         android:id="@+id/textView20"
-        android:layout_width="337dp"
-        android:layout_height="60dp"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
         android:fontFamily="@font/luckiestguy"
-        android:shadowColor="#56DB05"
-        android:shadowDx="5"
-        android:shadowDy="5"
-        android:shadowRadius="1.6"
-        android:text="WYBIERZ KATEGORIĘ:"
+        android:paddingStart="10dp"
+        android:paddingTop="8dp"
+        android:text="WYBIERZ KATEGORIĘ "
         android:textAlignment="center"
-        android:textAllCaps="true"
         android:textColor="#FFFFFF"
-        android:textSize="33sp"
-        android:gravity="center"
-        android:textStyle="bold"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.282" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="409dp"
+        android:layout_height="369dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.321" />
+        app:layout_constraintVertical_bias="0.82" />
 
     <TextView
         android:id="@+id/textView16"
@@ -85,12 +92,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.049" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
-        android:layout_height="369dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.806" />
 </androidx.constraintlayout.widget.ConstraintLayout>
