implementacja funkcjonalności DictActivity

--- a/app/src/main/res/layout/activity_dict.xml
+++ b/app/src/main/res/layout/activity_dict.xml
@@ -65,6 +65,7 @@
         app:layout_constraintVertical_bias="0.282" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/wordsRecyclerView"
         android:layout_width="409dp"
         android:layout_height="369dp"
         app:layout_constraintBottom_toBottomOf="parent"
