--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -48,25 +48,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.42" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText7"
-        android:layout_width="340dp"
-        android:layout_height="41dp"
-        android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
-        android:hint="HASŁO :"
-        android:includeFontPadding="true"
-        android:paddingStart="25dp"
-        android:textColor="#000000"
-        android:textColorHint="#FAFAFA"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.74" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputEditText6"
@@ -187,5 +168,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.026" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword2"
+        android:layout_width="340dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_background"
+        android:fontFamily="@font/luckiestguy"
+        android:hint="HASŁO :"
+        android:includeFontPadding="true"
+        android:paddingStart="25dp"
+        android:textColor="#000000"
+        android:textColorHint="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.74"
+        android:inputType="textPassword"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
