--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,6 @@
         android:ems="10"
         android:fontFamily="@font/luckiestguy"
         android:hint="HASŁO:"
-        android:inputType="textVisiblePassword"
         android:paddingStart="25dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -81,7 +80,8 @@
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.661" />
+        app:layout_constraintVertical_bias="0.661"
+        android:inputType="textPassword"/>
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputEditText"
